# linaldb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_ALIGNMENT_REPORT.md  DSL_REFERENCE.md  LICENSE  NewFeatures.md  README.md  TEST_COVERAGE.md  dataset_handlers_template.txt  example.tdb  linal.toml  test_data.h5  test_data.npy
benches/: dataset_ops.rs  phase1_benchmarks.rs  queries.rs  tensor_ops.rs
data/: exported_frameworks.csv  sample_data.csv
docs/: ARCHITECTURE.md  BENCHMARKS.md  DATASET_ARCHITECTURE.md  DATASET_EXPORT_FEATURE_PLAN.md  DSL_REFERENCE.md  ENGINE_DIAGNOSIS_PHASE6.md  ERROR_REFERENCE.md  EXAMPLES.md  Formalizarion_Roadmap.md  LINAL_ROADMAP_NEW_FEATURES.md  MODULAR_PLAN.md  NewFeatures.md  PERFORMANCE_ROADMAP_V2.md  PROGRESS_SUMMARY.md  Performance_improvement_plan.md  SCIENTIFIC_DATASET_INGESTION_PLAN.md  TENSOR_FIRST_PERFORMANCE.md  Tasks_implementations.md  TensorFirstLinalPlan.md
examples/: advanced_analytics.lnl  end_to_end.lnl  example.vdb  export_import_csv.lnl  features_demo.vdb  gen_test_data.rs  gen_zarr_data.rs  gen_zarr_data_minimal.rs  introspection_demo.lnl  managed_service_demo.lnl  matrix_operations.tdb  persistence_demo.lnl  persistence_demo.vdb  reference_graph.lnl  smoke_test.lnl  tensor_datasets.lnl  test_matrix_math.vdb  verify_dataset_export.lnl
scripts/: configure_gh_rules.sh
src/: dataset.rs  dataset_store.rs  dsl.rs  engine.rs  lib.rs  main.rs  ops.rs  store.rs  tensor.rs  tuple.rs  value.rs
tests/: add_column_test.rs  aggregation_feature_test.rs  avg_aggregation_test.rs  checkpoints_test.rs  comprehensive_tensor_dataset_test.rs  computed_columns_test.rs  concurrency_test.rs  consistency_test.rs  context_integration_tests.rs  csv_io_test.rs  dataset_batching_test.rs  dataset_delivery_test.rs  dataset_dsl_test.rs  dataset_integration.rs  dataset_integrity_test.rs  (+43 more)
(+84 files in other folders)
