[package]
name = "vector-db-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toon-format = "0.4.0"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
